fix(DynamicFee): fix input line jumping to adhere to size of parent

--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -67,7 +67,7 @@
   }
   label { font-size: small; }
   .form-control { width: auto; }
-  .help-block {
+  & ~ .help-block {
     &.friendly {
       color: $blue;
       &.has-error {
